# Voxel

./: -  .gitignore  .ignore  CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/Include/Core/: boot.h  input.h  pch.h  window.h
Core/Include/Core/Render/: add.h  camera.h  commands.h  context.h  device_dense_set.h  device_hash_set.h  edit.h  frame.h  sparse_voxel_tree.h  types.h
Core/Include/Core/Render/Vulkan/: acceleration_structure.h  buffer.h  command_buffer.h  command_pool.h  context.h  descriptors.h  image.h  image_util.h  indirect_buffer.h  indirect_draw.h  info.h  pipeline.h  sampler.h  shader_binding_table.h  submission_pass.h  swapchain.h  util.h
Core/Include/Core/Util/: fail.h  log.h  thread_pool.h  timer.h
Core/Include/Core/Util/Parse/: gltf.h  json.h
Core/Source/: boot.cpp  input.cpp  window.cpp
Core/Source/Render/: add.cpp  camera.cpp  commands.cpp  context.cpp  device_dense_set.cpp  device_hash_set.cpp  edit.cpp  frame.cpp  sparse_voxel_tree.cpp
Core/Source/Render/Shaders/: allocate.slang  allocate_child_mask.slang  beam.slang  calculate_radiance.slang  cmd_clear_volume.slang  cmd_raycast.slang  common.slang  document_allocations.slang  document_far_ptrs.slang  indirect_lighting.slang  main.slang  mip_map_radiance.slang  reallocate.slang  triangle_id.slang  voxelize.slang
Core/Source/Render/Shaders/Include/: camera.slang  common.slang  dense_set.slang  hash_set.slang  voxel_tree.slang
Core/Source/Render/Vulkan/: acceleration_structure.cpp  buffer.cpp  command_buffer.cpp  command_pool.cpp  context.cpp  descriptors.cpp  image.cpp  indirect_draw.cpp  info.cpp  pipeline.cpp  sampler.cpp  shader_binding_table.cpp  swapchain.cpp  util.cpp
Core/Source/Util/: fail.cpp  log.cpp  thread_pool.cpp
Core/Source/Util/Parse/: gltf.cpp  json.cpp
Editor/: CMakeLists.txt
Editor/Assets/: Cube.glb  DragonAttenuation.glb  Sphere.glb
Editor/Source/: editor.cpp  editor.h  main.cpp
MathLib/: CMakeLists.txt  test.cpp
MathLib/Include/Math/: camera.hpp  matrix.hpp  other.hpp  pch.h  quaternion.hpp  ray.hpp  types.hpp  vector.hpp
